# usbipd_gui

./: .gitignore  Cargo.toml  LICENSE  README.markdown  config.example.json  config.json
.github/workflows/: ci.yml
src/: config.rs  main.rs  usbipd.rs
