[package]
name = "usbipd_gui"
version = "1.0.1"
edition = "2021"
description = "GUI for managing USB devices via usbipd on Windows"
license = "MIT"

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wingdi", "shellapi", "libloaderapi", "processthreadsapi"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"